@@ -2,7 +2,8 @@ package org.opentripplanner.graph_builder.module.osm;
 
 
 import com.google.common.collect.Maps;
-import junit.framework.TestCase;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.opentripplanner.openstreetmap.BinaryOpenStreetMapProvider;
 import org.opentripplanner.routing.algorithm.astar.AStar;
 import org.opentripplanner.routing.api.request.RoutingRequest;
@@ -16,7 +17,10 @@ import org.opentripplanner.routing.spt.ShortestPathTree;
 import java.io.File;
 import java.net.URL;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
+
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
 
 /**
  * Verify that OSM ways that represent proposed or as yet unbuilt roads are not used for routing.
@@ -24,17 +28,18 @@ import java.util.HashMap;
  *
  * @author abyrd
  */
-public class TestUnroutable extends TestCase {
+public class TestUnroutable {
 
-    private Graph graph = new Graph();
+    private final Graph graph = new Graph();
 
-    private AStar aStar = new AStar();
+    private final AStar aStar = new AStar();
 
+    @BeforeEach
     public void setUp() throws Exception {
         OpenStreetMapModule osmBuilder = new OpenStreetMapModule();
         osmBuilder.setDefaultWayPropertySetSource(new DefaultWayPropertySetSource());
         URL osmDataUrl = getClass().getResource("bridge_construction.osm.pbf");
-        File osmDataFile = new File(URLDecoder.decode(osmDataUrl.getFile(), "UTF-8"));
+        File osmDataFile = new File(URLDecoder.decode(osmDataUrl.getFile(), StandardCharsets.UTF_8));
         BinaryOpenStreetMapProvider provider = new BinaryOpenStreetMapProvider(osmDataFile, true);
         osmBuilder.setProvider(provider);
         HashMap<Class<?>, Object> extra = Maps.newHashMap();
@@ -46,6 +51,7 @@ public class TestUnroutable extends TestCase {
      * therefore tagged highway=construction.
      * TODO also test unbuilt, proposed, raceways etc.
      */
+    @Test
     public void testOnBoardRouting() {
 
         RoutingRequest options = new RoutingRequest();
@@ -55,13 +61,12 @@ public class TestUnroutable extends TestCase {
         options.setRoutingContext(graph, from, to);
         options.setMode(TraverseMode.BICYCLE);
         ShortestPathTree spt = aStar.getShortestPathTree(options);
-        GraphPath path = spt.getPath(to, false);
+        GraphPath path = spt.getPath(to);
         // At the time of writing this test, the router simply doesn't find a path at all when highway=construction
         // is filtered out, thus the null check.
         if (path != null) {
             for (Edge edge : path.edges) {
-                assertFalse("Path should not use the as-yet unbuilt Tilikum Crossing bridge.",
-                        "Tilikum Crossing".equals(edge.getDefaultName()));
+              assertNotEquals("Path should not use the as-yet unbuilt Tilikum Crossing bridge.", "Tilikum Crossing", edge.getDefaultName());
             }
         }
     }
